--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,3 @@
-.scrollbar-thin {
-  scrollbar-width: thin;
-}
-
-.scrollbar-thin::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-.scrollbar-thin::-webkit-scrollbar-thumb {
-  background-color: #9ca3af;
-  border-radius: 9999px;
-}
-
-.scrollbar-thin::-webkit-scrollbar-track {
-  background-color: #e5e7eb;
+.scrollbar-hide::-webkit-scrollbar{
+  display: none;
 }
